--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-masonry-component": "^6.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-search-field": "^1.2.1",
